# FireRedVad

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  requirements.txt
.github/workflows/: ci.yml  release.yml
model/: cmvn.json  golden_hello_zh.json  model_meta.json  weights.npz
src/: audio.rs  cli.rs  cmvn.rs  fbank.rs  lib.rs  main.rs  model.rs  postprocess.rs  vad.rs
tools/: compare_debug_dump.py  compare_decision_window.py  dump_python_vad_debug.py  export_vad_weights.py
